# nitridation_calibration

code/nitcal/: .gitignore  AUTHORS  CHANGES  LICENSE  Makefile.am  configure.ac
code/nitcal/doxygen/: Makefile.am  aminclude.am  nitcal.dox  nitcal.dox.in  nitcal.page
code/nitcal/m4/: config_summary.m4
code/nitcal/m4/common/: grins.m4  libmesh_new.m4  queso_new.m4
code/nitcal/src/: Makefile.am
code/nitcal/src/apps/: likelihood_sampling.C  likelihood_test.C  nit_data.C  nit_interp.C  nitcal.C  nitfp.C  nitmap.C  nitsip.C  reaction_energy_test.C
code/nitcal/src/boundary_conditions/include/: TubeWallBCFactory.h  inlet_profile.h  inlet_profile_bc_factory.h  nitcal_bc_factory.h  nitcal_catalytic_wall.h  tube_twall.h  tube_wall_bc_factory.h
code/nitcal/src/boundary_conditions/src/: inlet_profile.C  inlet_profile_bc_factory.C  nitcal_bc_factory.C  nitcal_catalytic_wall.C  tube_twall.C  tube_wall_bc_factory.C
code/nitcal/src/common/lic_utils/.svn/: wc.db
code/nitcal/src/interface/include/: nitridation_simulation.h  simulation_interface.h
code/nitcal/src/interface/src/: nitridation_simulation.C  simulation_interface.C
code/nitcal/src/inverse_problem/include/: arrhenius_gamma_n_arrhenius_gamma_cn_likelihood.h  arrhenius_gamma_n_arrhenius_gamma_cn_model.h  arrhenius_gamma_n_arrhenius_gamma_cn_sip.h  arrhenius_gamma_n_constant_gamma_cn_likelihood.h  arrhenius_gamma_n_constant_gamma_cn_model.h  arrhenius_gamma_n_constant_gamma_cn_sip.h  arrhenius_gamma_n_power_gamma_cn_likelihood.h  arrhenius_gamma_n_power_gamma_cn_sip.h  average_N_helper.h  constant_gamma_cn_likelihood.h  constant_gamma_cn_model.h  constant_gamma_cn_sip.h  constant_gamma_n_constant_gamma_cn_likelihood.h  constant_gamma_n_constant_gamma_cn_model.h  constant_gamma_n_constant_gamma_cn_sip.h  full_model_composition.h  full_model_evaluator.h  full_model_likelihood.h  gamma_cn_likelihood.h  gamma_cn_sip.h  gamma_n_gamma_cn_likelihood_base.h  likelihood_base.h  likelihood_comm_handler.h  mass_loss_helper.h  model_builder.h  model_evaluator_base.h  model_interface_base.h  model_interpolation_builder.h  power_gamma_n_arrhenius_gamma_cn_likelihood.h  power_gamma_n_arrhenius_gamma_cn_sip.h  power_gamma_n_constant_gamma_cn_likelihood.h  power_gamma_n_constant_gamma_cn_sip.h  power_gamma_n_power_gamma_cn_likelihood.h  power_gamma_n_power_gamma_cn_sip.h  queso_gaussian_likelihood_diagonal_covariance_interface.h  queso_likelihood_interface.h  queso_sip_interface.h  sip_base.h  surrogate_model_composition.h  surrogate_model_likelihood.h
code/nitcal/src/inverse_problem/src/: arrhenius_gamma_n_arrhenius_gamma_cn_likelihood.C  arrhenius_gamma_n_arrhenius_gamma_cn_model.C  arrhenius_gamma_n_arrhenius_gamma_cn_sip.C  arrhenius_gamma_n_constant_gamma_cn_likelihood.C  arrhenius_gamma_n_constant_gamma_cn_model.C  arrhenius_gamma_n_constant_gamma_cn_sip.C  arrhenius_gamma_n_power_gamma_cn_likelihood.C  arrhenius_gamma_n_power_gamma_cn_sip.C  average_N_helper.C  constant_gamma_cn_likelihood.C  constant_gamma_cn_model.C  constant_gamma_cn_sip.C  constant_gamma_n_constant_gamma_cn_likelihood.C  constant_gamma_n_constant_gamma_cn_model.C  constant_gamma_n_constant_gamma_cn_sip.C  full_model_composition.C  full_model_evaluator.C  full_model_likelihood.C  gamma_cn_likelihood.C  gamma_cn_sip.C  gamma_n_gamma_cn_likelihood_base.C  likelihood_base.C  likelihood_comm_handler.C  mass_loss_helper.C  model_builder.C  model_interface_base.C  model_interpolation_builder.C  power_gamma_n_arrhenius_gamma_cn_likelihood.C  power_gamma_n_arrhenius_gamma_cn_sip.C  power_gamma_n_constant_gamma_cn_likelihood.C  power_gamma_n_constant_gamma_cn_sip.C  power_gamma_n_power_gamma_cn_likelihood.C  power_gamma_n_power_gamma_cn_sip.C  queso_gaussian_likelihood_diagonal_covariance_interface.C  queso_likelihood_interface.C  queso_sip_interface.C  sip_base.C  surrogate_model_composition.C  surrogate_model_likelihood.C
code/nitcal/src/qoi/include/: average_N_mole_fraction.h  mass_loss.h  mass_loss_catalytic.h  qoi_factory.h  qoi_names.h
code/nitcal/src/qoi/src/: average_N_mole_fraction.C  mass_loss.C  mass_loss_catalytic.C  qoi_factory.C
code/nitcal/test/: K_2_63.sh.in  K_2_63_O_2_28_constant_gamma_n_constant_gamma_cn_likelihood_reg.sh.in  K_2_63_O_2_28_constant_gamma_n_constant_gamma_cn_likelihood_reg2.sh.in  K_2_63_constant_gamma_n_constant_gamma_cn_likelihood_reg.sh.in  Makefile.am  O_2_28.sh.in  O_2_28_constant_gamma_n_constant_gamma_cn_likelihood_reg.sh.in  fp_regression.C  likelihood_regression.C  tube_twall_test.C  tube_twall_test.sh.in  two_dataset_likelihood_regression.C
code/nitcal/test/input_files/: K_2_63_O_2_28_constant_gamma_n_constant_gamma_cn_sip.in.in  K_2_63_axi.exo  K_2_63_axi.in  K_2_63_axi.in.in  O_2_28_axi.in.in  O_2_28_constant_gamma_n_constant_gamma_cn_sip.in.in  constant_gamma_n_constant_gamma_cn_sip.in.in  tube_twall_test.in
code/nitcal/test/test_data/: K_2_63_axi.xdr  O_2_28_axi.xdr
code/scripts/: hist.py  likelihood.py  mean_autocorr.py  plot_gamma.py  plot_samples_data.py
common_input/: nitcal_arrhenius_gamma_n_constant_cn_common.in
grids/: A_1_13a_axi.cub  A_1_13a_axi.exo  C_1_15_axi.cub  C_1_15_axi.exo  C_2_38_axi.cub  C_2_38_axi.exo  D_1_18_axi.cub  D_1_18_axi.exo  E_1_12_axi.cub  E_1_12_axi.exo  F_1_17_axi.cub  F_1_17_axi.exo  G_1_11a_axi.cub  G_1_11a_axi.exo  G_2_61a_axi.cub  G_2_61a_axi.exo  G_2_62a_axi.cub  G_2_62a_axi.exo  H_1_14a_axi.cub  I_1_19_axi.exo  I_2_36_axi.cub  I_2_36_axi.exo  I_2_54_axi.cub  I_2_54_axi.exo  J_1_21_axi.exo  K_2_63_axi.cub  K_2_63_axi.exo  K_2_63_axi_new.exo  M_2_34_axi.cub  M_2_34_axi.exo  M_2_37_axi.cub  M_2_37_axi.exo  N_2_35_axi.cub  N_2_35_axi.exo  N_2_39_axi.cub  N_2_39_axi.exo  O_2_28_axi.cub  O_2_28_axi.exo  P_2_30_axi.cub  Q_2_29_axi.cub  (+18 more)
map_runs/constant_gammaCN_arrhenius_gammaN/: A_1_13a.in  A_1_13a_9adapt.xda  O_2_28_9adapt.xda  O_2_28_restart.xdr  Q_2_29.in  Q_2_29_9adapt.xda  Q_2_29_restart.in  U_2_55.in  U_2_55_9adapt.xda  U_2_55_restart.xdr  model.in  queso.in  restart_A_1_13a.xdr  restart_Q_2_29.xdr  sip.in
queso_runs/constant_gammaCN_arrhenius_gammaN_test/: queso.in  (+15 more)
(+594 files in other folders)
